--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,17 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@types/react-redux": "^7.1.21",
     "chakra-ui-steps": "^1.5.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.7",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
